syntax = "proto3";
 
option csharp_namespace = "Services.Grpc.Interactions";
 
package Interactions;
 
service GrpcInteractionsService {
  rpc GetInteractions (GetPostInteractionsRequest) returns (GetPostInteractionsResponse);
}
 
message GetPostInteractionsRequest {
  string PostId = 1;
}
 
message GetPostInteractionsResponse {
  int32 LikesAmount = 1;
  int32 ViewsAmount = 2;
}